src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: theme('colors.bg')
}

.sub-options {
  transform: translateY(-74.5%);
  transition: transform 0.3s ease-out;
  z-index: -1;
}

.sub-options.show {
  transform: translateY(0);
  z-index: 1;
}

.item-shadow {
  box-shadow: 0px 0px 20px 0px theme('colors.fg');
  transition: all 100ms;
}

.item-shadow:hover {
  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.7);
  transition: all 100ms;
}

.list-shadow {
  box-shadow: 0px 0px 0px 0px theme('colors.fg');
  transition: all 100ms;
}

.list-shadow:hover {
  box-shadow: 0px 0px 15px 0px theme('colors.fg');
  transition: all 100ms;
}

